# HotelService

./: .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
app/: db.py  main.py  models.py  schemas.py
app/api/: bookings.py  rooms.py
app/crud/: bookings.py  rooms.py
db/: init.sql
tests/: conftest.py  test_bookings.py  test_rooms.py
