[tool.poetry]
name = "hotel-booking-service"
version = "0.1.0"
description = "pet-projecet"
authors = ["twentytwo-sixteen"]
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.10.12"
fastapi = "^0.111.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
psycopg2-binary = "^2.9.9"
pydantic = "^2.7.1"
sqlalchemy = "^2.0.30"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
pytest-asyncio = "^0.23"
httpx = "^0.27.0"
ruff = "^0.4.4"
pre-commit = "^3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"